# pytemplate-uv

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  TEST_REVIEW_SUMMARY.md  Taskfile.yml  coverage.json  migrate_to_uv.py  projects_using_template.md  pyproject.toml  run_tests.py  template_paths.yaml  version.py
.claude/: .claudeignore  settings.json  settings.local.json
.claude/agents/: KNOWN_ISSUES.md  README.md  backend-architect.md  changes-reviewer.md  lead_architect.md  test_engineer.md
.claude/commands/: codex-review.md  git-commit.md  iterative-review.md  plan.md  review.md  test-sync.md  test-update.md  type-check.md
.claude/includes/: todo-creation.md  user-approval-gate.md
.claude/references/: commit-emojis.md
.claude/skills/codex/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  migration_help.yml
.github/workflows/: ci.yml  release.yml
archive/pyproject-template-20251009/{{cookiecutter.project_name}}/: .gitignore  pyproject.toml
archive/pyproject-template-20251009/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: config.py
config_templates/: lib.yaml.template  service.yaml.template  workspace.yaml.template
configs/: lib.yaml  service.yaml  workspace.yaml
docs/: CLAUDE_GLOBAL.md  CLAUDE_PROJECT_EXAMPLE.md  code_review.md  custom_modifications_doc.md  gap_analysis.md  migration_plan.md  team_requirements.md  week1_deliverables.md  week2_deliverables.md  week3_test_results.md
pytemplate/: __init__.py  constants.py  logger.py  main.py  project_creator.py  template_manager.py  template_paths.yaml
pytemplate/config/: template_paths.yaml
pytemplate/templates/configs/: lib.yaml.template  service.yaml.template  workspace.yaml.template
pytemplate/templates/pyproject-template/: cookiecutter.json
pytemplate/templates/pyproject-template/hooks/: post_gen_project.py
pytemplate/templates/pyproject-template/{{cookiecutter.project_name}}/: .codecov.yml  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.yaml.example  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  settings.yaml  {{cookiecutter.envfile}}.example
pytemplate/templates/pyproject-template/{{cookiecutter.project_name}}/.devcontainer/: Dockerfile  devcontainer.json
pytemplate/templates/pyproject-template/{{cookiecutter.project_name}}/.github/workflows/: ci.yml
pytemplate/templates/pyproject-template/{{cookiecutter.project_name}}/docs/: api.md  index.md
pytemplate/templates/pyproject-template/{{cookiecutter.project_name}}/tests/: test_main.py
pytemplate/templates/pyproject-template/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: cli.py  config.py  logger.py
pytemplate/templates/shared/: Taskfile.lib.yaml  coding_rules.md  envrc
scripts/: discover_projects.py
templates/configs/: lib.yaml.template  service.yaml.template
templates/project-template/: cookiecutter.json
templates/project-template/hooks/: post_gen_project.py
templates/project-template/{{cookiecutter.project_name}}/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
templates/project-template/{{cookiecutter.project_name}}/.devcontainer/: {% if cookiecutter.devcontainer.add_devcontainer %}devcontainer.json{% endif %}
templates/pyproject-template/{{cookiecutter.project_name}}/: .gitignore  pyproject.toml
templates/shared/: coding_rules.md
tests/: conftest.py  test_cli.py  test_config_validation.py  test_constants.py  test_create_config.py  test_create_lib.py  test_create_project_from_config.py  test_edge_cases.py  test_integration.py  test_project_creator.py  test_security.py  test_template_manager.py  test_workspace_creation.py
