[build-system]
requires = ["setuptools>=68.2.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytemplate-uv"
version = "0.2.8"
description = """PyTemplate UV: A Modern Python Project Generator

A powerful CLI tool that simplifies Python project creation using the `uv` package manager. Streamline your development workflow with standardized, production-ready project templates.

Key Features:
- ðŸš€ Rapid project initialization with predefined templates
- ðŸ”§ Multiple template support (FastAPI, Standard Python projects)
- ðŸ“¦ Seamless integration with `uv` for efficient package management
- ðŸ§ª Built-in testing and quality assurance infrastructure
- ðŸ” Preconfigured linting and type checking support

Ideal for developers looking to bootstrap Python projects quickly with best practices and modern tooling."""
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Leo Liu", email = "yuxuzi@gmail.com"}
]
keywords = [
    "python", 
    "template", 
    "project-generator", 
    "uv", 
    "cookiecutter", 
    "cli"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "cookiecutter>=2.5.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "dynaconf>=3.2.10",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://github.com/yuxuzi/pytemplate-uv"
Repository = "https://github.com/yuxuzi/pytemplate-uv"
Issues = "https://github.com/yuxuzi/pytemplate-uv/issues"
Changelog = "https://github.com/yuxuzi/pytemplate-uv/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.9",
    "black>=23.12.1",
    "pytest>=7.4.4",
    "pre-commit>=3.6.0",
    "mypy>=1.15.0",
    "coverage>=7.3.2",
    "pytest-cov>=6.0.0",
    "pytest>=7.4.4",
    "deptry>=0.23.1",

]
docs = [
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.0"
]

[tool.setuptools]
packages = ["pytemplate"]

[project.scripts]
pytemplate = "pytemplate.main:app"
pytemplate-custom = "pytemplate.main:custom_project_cli"

[tool.setuptools.package-data]
"pytemplate" = [
    "template_paths.yaml",
    "templates/**/*",
    "templates/*",
    "templates/pyproject-template/**/*",
    "templates/configs/**/*",
    "templates/shared/**/*"
]

[tool.setuptools_scm]
write_to = "version.py"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "archive",
    "pytemplate/templates",
    "migrate_to_uv.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "D",    # pydocstyle
]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D203",  # one-blank-line-before-class (incompatible with D211)
    "D213",  # multi-line-summary-second-line (incompatible with D212)
    "B017",  # pytest.raises(Exception) is used for testing exceptions
    "B008",  # Do not perform function call in argument defaults (typer pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D103"]  # Ignore missing docstrings in tests
"pytemplate/project_creator.py" = ["C901"]  # Complex functions are necessary for project creation
"migrate_to_uv.py" = ["C901"]  # Migration utility has complex logic

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = false
ignore_missing_imports = true
exclude = [
    "archive",
    "pytemplate/templates",
    "build",
    "dist",
    "migrate_to_uv.py",
]

[tool.pytest.ini_options]
norecursedirs = [
    "templates",
    ".*",
    "build",
    "dist",
    "node_modules"
]
log_level = "ERROR"

[tool.deptry]
ignore_notebooks = true
ignore = ["DEP002"]
known_first_party = ["pytemplate"]
extend_exclude = [
    "tests",
    "docs",
    "archive",
    "templates",
    ".venv",
    "build",
    "dist",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]

    
