[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytemplate-uv"
version = "0.2.8"
description = "PyTemplate UV: A Modern Python Project Generator using uv package manager"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Leo Liu", email = "yuxuzi@gmail.com"}
]
keywords = ["python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "cookiecutter>=2.5.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "dynaconf>=3.2.10",
    "toml>=0.10.2"
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "build>=1.0.0",
    "coverage>=7.3.2",
    "deptry>=0.23.1",
    "mypy>=1.15.0",
    "pre-commit-hooks>=4.5.0",
    "pre-commit>=3.6.0",
    "pytest-cov>=6.0.0",
    "pytest>=7.4.4",
    "ruff>=0.1.9",
    "twine>=4.0.0"
]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
]

[project.scripts]
pytemplate = "pytemplate.main:app"
pytemplate-custom = "pytemplate.main:custom_project_cli"

[tool.hatch.build.targets.wheel]
packages = ["pytemplate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
]
# E501 (line too long) is handled by Black formatter
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pytemplate"]
combine-as-imports = true
lines-after-imports = 2

[tool.black]
line-length = 100
target-version = ['py311']
preview = true

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pytemplate --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["pytemplate"]
omit = ["tests/*"]

[tool.deptry]
extend_exclude = ["tests", "docs"]
